[gd_scene load_steps=9 format=3 uid="uid://cr5gu2dhy66ug"]

[ext_resource type="FontFile" uid="uid://c5usytkhau5qg" path="res://assets/misc/Lilliput Steps.otf" id="1_gylvj"]
[ext_resource type="PackedScene" uid="uid://chcmtwtia1s41" path="res://scenes/levels/base_level.tscn" id="1_v07cc"]
[ext_resource type="Script" path="res://scripts/levelScripts/level_1.gd" id="2_5ooej"]
[ext_resource type="StyleBox" uid="uid://pl7u85rxhfye" path="res://resources/new_style_box_flat_normal.tres" id="2_o34x7"]
[ext_resource type="StyleBox" uid="uid://dirr82n77phow" path="res://resources/new_style_box_flat_hover.tres" id="3_7i85m"]
[ext_resource type="StyleBox" uid="uid://cg54yh1dsa1xo" path="res://resources/new_style_box_flat_pressed.tres" id="4_oypj5"]
[ext_resource type="StyleBox" uid="uid://b5mq8sf7g0a5r" path="res://resources/new_style_box_empty.tres" id="5_kxjml"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_et38r"]
bg_color = Color(0.0235294, 0.27451, 0, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0.0755101, 0.0755101, 0.0755101, 1)

[node name="Level_1" instance=ExtResource("1_v07cc")]
rotation = -0.00257201
script = ExtResource("2_5ooej")

[node name="Label" type="Label" parent="." index="0"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -646.0
offset_top = 30.0
offset_right = 646.0
offset_bottom = 197.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_gylvj")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_et38r")
text = "1) Você está pronto para
um grande desafio?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button1" type="Button" parent="." index="1"]
layout_mode = 0
offset_left = 260.0
offset_top = 372.0
offset_right = 610.0
offset_bottom = 472.0
theme_override_fonts/font = ExtResource("1_gylvj")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = ExtResource("2_o34x7")
theme_override_styles/hover = ExtResource("3_7i85m")
theme_override_styles/pressed = ExtResource("4_oypj5")
theme_override_styles/focus = ExtResource("5_kxjml")
text = "Não
"

[node name="Button2" type="Button" parent="." index="2"]
layout_mode = 0
offset_left = 720.0
offset_top = 372.0
offset_right = 1070.0
offset_bottom = 472.0
theme_override_fonts/font = ExtResource("1_gylvj")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = ExtResource("2_o34x7")
theme_override_styles/hover = ExtResource("3_7i85m")
theme_override_styles/pressed = ExtResource("4_oypj5")
theme_override_styles/focus = ExtResource("5_kxjml")
text = "Sim"

[node name="Button3" type="Button" parent="." index="3"]
layout_mode = 0
offset_left = 260.0
offset_top = 513.0
offset_right = 610.0
offset_bottom = 613.0
theme_override_fonts/font = ExtResource("1_gylvj")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = ExtResource("2_o34x7")
theme_override_styles/hover = ExtResource("3_7i85m")
theme_override_styles/pressed = ExtResource("4_oypj5")
theme_override_styles/focus = ExtResource("5_kxjml")
text = "Talvez
"

[node name="Button4" type="Button" parent="." index="4"]
layout_mode = 0
offset_left = 720.0
offset_top = 513.0
offset_right = 1070.0
offset_bottom = 613.0
theme_override_fonts/font = ExtResource("1_gylvj")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = ExtResource("2_o34x7")
theme_override_styles/hover = ExtResource("3_7i85m")
theme_override_styles/pressed = ExtResource("4_oypj5")
theme_override_styles/focus = ExtResource("5_kxjml")
text = "Mais tarde
"

[connection signal="mouse_entered" from="Button1" to="." method="_on_button_1_mouse_entered"]
[connection signal="mouse_exited" from="Button1" to="." method="_on_button_1_mouse_exited"]
[connection signal="pressed" from="Button1" to="." method="_on_button_1_pressed"]
[connection signal="mouse_entered" from="Button2" to="." method="_on_button_2_mouse_entered"]
[connection signal="mouse_exited" from="Button2" to="." method="_on_button_2_mouse_exited"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="mouse_entered" from="Button3" to="." method="_on_button_3_mouse_entered"]
[connection signal="mouse_exited" from="Button3" to="." method="_on_button_3_mouse_exited"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
[connection signal="mouse_entered" from="Button4" to="." method="_on_button_4_mouse_entered"]
[connection signal="mouse_exited" from="Button4" to="." method="_on_button_4_mouse_exited"]
[connection signal="pressed" from="Button4" to="." method="_on_button_4_pressed"]
